--- a/backend/.env
+++ b/backend/.env
@@ -5,7 +5,7 @@ NODE_ENV=development
 # Database Configuration
 DB_HOST=localhost
 DB_USER=root
-DB_PASS=password
+DB_PASS=
 DB_NAME=institute_management_system
 
 # Authentication
